tests/dataset/tpc-h/compiler/c/q18.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:20Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:20Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static int threshold = 200;

typedef struct {
  const char *c_name;
  int c_custkey;
  double revenue;
  double c_acctbal;
  const char *n_name;
  const char *c_address;
  const char *c_phone;
  const char *c_comment;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int n_nationkey;
  const char *n_name;
} nation_t;
typedef struct {
  int len;
  nation_t *data;
} nation_list_t;
nation_list_t create_nation_list(int len) {
  nation_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(nation_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_custkey;
  const char *c_name;
  double c_acctbal;
  int c_nationkey;
  const char *c_address;
  const char *c_phone;
  const char *c_comment;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int o_orderkey;
  int o_custkey;
} order_t;
typedef struct {
  int len;
  order_t *data;
} order_list_t;
order_list_t create_order_list(int len) {
  order_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int l_orderkey;
  int l_quantity;
  double l_extendedprice;
  double l_discount;
} lineitem_t;
typedef struct {
  int len;
  lineitem_t *data;
} lineitem_list_t;
lineitem_list_t create_lineitem_list(int len) {
  lineitem_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(lineitem_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int c_name;
  int c_custkey;
  double revenue;
  int c_acctbal;
  int n_name;
  int c_address;
  int c_phone;
  int c_comment;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int
    test_Q18_returns_large_volume_customers_with_total_quantity___200_result;
static void
test_Q18_returns_large_volume_customers_with_total_quantity___200() {
  tmp1_t tmp1[] = {(tmp1_t){.c_name = "Alice",
                            .c_custkey = 1,
                            .revenue = 1700.0,
                            .c_acctbal = 1000.0,
                            .n_name = "GERMANY",
                            .c_address = "123 Market St",
                            .c_phone = "123-456",
                            .c_comment = "Premium client"}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_Q18_returns_large_volume_customers_with_total_quantity___200_result
          .len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (
        int i3 = 0;
        i3 <
        test_Q18_returns_large_volume_customers_with_total_quantity___200_result
            .len;
        i3++) {
      if (test_Q18_returns_large_volume_customers_with_total_quantity___200_result
              .data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  nation_t nation[] = {(nation_t){.n_nationkey = 1, .n_name = "GERMANY"}};
  int nation_len = sizeof(nation) / sizeof(nation[0]);
  customer_t customer[] = {(customer_t){.c_custkey = 1,
                                        .c_name = "Alice",
                                        .c_acctbal = 1000.0,
                                        .c_nationkey = 1,
                                        .c_address = "123 Market St",
                                        .c_phone = "123-456",
                                        .c_comment = "Premium client"},
                           (customer_t){.c_custkey = 2,
                                        .c_name = "Bob",
                                        .c_acctbal = 200.0,
                                        .c_nationkey = 1,
                                        .c_address = "456 Side St",
                                        .c_phone = "987-654",
                                        .c_comment = "Frequent returns"}};
  int customer_len = sizeof(customer) / sizeof(customer[0]);
  order_t orders[] = {(order_t){.o_orderkey = 100, .o_custkey = 1},
                      (order_t){.o_orderkey = 200, .o_custkey = 1},
                      (order_t){.o_orderkey = 300, .o_custkey = 2}};
  int orders_len = sizeof(orders) / sizeof(orders[0]);
  lineitem_t lineitem[] = {(lineitem_t){.l_orderkey = 100,
                                        .l_quantity = 150,
                                        .l_extendedprice = 1000.0,
                                        .l_discount = 0.1},
                           (lineitem_t){.l_orderkey = 200,
                                        .l_quantity = 100,
                                        .l_extendedprice = 800.0,
                                        .l_discount = 0.0},
                           (lineitem_t){.l_orderkey = 300,
                                        .l_quantity = 30,
                                        .l_extendedprice = 300.0,
                                        .l_discount = 0.05}};
  int lineitem_len = sizeof(lineitem) / sizeof(lineitem[0]);
  result_item_list_t result = (result_item_list_t){0, NULL};
  printf("[");
  for (int i4 = 0; i4 < result.len; i4++) {
    if (i4 > 0)
      printf(",");
    result_item_t it = result.data[i4];
    printf("{");
    _json_string("c_name");
    printf(":");
    _json_int(it.c_name);
    printf(",");
    _json_string("c_custkey");
    printf(":");
    _json_int(it.c_custkey);
    printf(",");
    _json_string("revenue");
    printf(":");
    _json_float(it.revenue);
    printf(",");
    _json_string("c_acctbal");
    printf(":");
    _json_int(it.c_acctbal);
    printf(",");
    _json_string("n_name");
    printf(":");
    _json_int(it.n_name);
    printf(",");
    _json_string("c_address");
    printf(":");
    _json_int(it.c_address);
    printf(",");
    _json_string("c_phone");
    printf(":");
    _json_int(it.c_phone);
    printf(",");
    _json_string("c_comment");
    printf(":");
    _json_int(it.c_comment);
    printf("}");
  }
  printf("]");
  test_Q18_returns_large_volume_customers_with_total_quantity___200_result =
      result;
  test_Q18_returns_large_volume_customers_with_total_quantity___200();
  return 0;
}
